# rosprolog

./: .gitignore  CMakeLists.txt  README.md  package.xml
include/rosprolog/rosprolog_node/: PrologNode.h
launch/: rosprolog.launch
prolog/: init.pl  rosprolog_kb.pl  rostest.pl
scripts/: README.md  RosprologRestClient.py  rosprolog  rosprolog-doc  rosprolog-test  rosprolog_commandline.py  rosprolog_rest.py
src/: __init__.pl  json_ros.py  logging.pl  package.pl  query.pl  ros.pl  rosprolog_doc.pl  rostest.pl
src/rosprolog_client/: rosprolog_client.py
src/rosprolog_kb/: rosprolog_kb.cpp
src/rosprolog_node/: PrologNode.cpp
