<package format="3">
  <name>rosprolog</name>
  <version>1.0.0</version>
  <description>
    rosprolog is a Prolog client for ROS, and also implements a
    ROS node that exposes Prolog engines to other ROS nodes.
  </description>
  <maintainer email="danielb@uni-bremen.de">Daniel Beßler</maintainer>

  <license>BSD, GPL</license>

  <url type="website">http://www.ros.org/wiki/rosprolog</url>
  <url type="bugtracker">https://github.com/knowrob/knowrob/issues</url>

  <author>Lorenz Moesenlechner</author>
  <author email="danielb@uni-bremen.de">Daniel Beßler</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roslib</build_depend>
  <build_depend>rospack</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>json_prolog_msgs</build_depend>
  <build_depend>libjson-glib</build_depend>

  <exec_depend>swi-prolog</exec_depend>
  <exec_depend>roslib</exec_depend>
  <exec_depend>rospack</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>json_prolog_msgs</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-future</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-future</exec_depend>

  <export>
    <rosdoc config="rosdoc.yaml"/>
  </export>

</package>
